fix: reduce images size in contact page on mobile

--- a/assets/style.css
+++ b/assets/style.css
@@ -89,8 +89,17 @@ body {
 }
 
 .contact-img {
-    float: left;
+    height: 25px;
+    width: 25px;
     margin: 0 0.25rem 0 0;
+}
+
+@media (max-width: 600px) {
+    /* On small screens, reduce the image size */
+    .contact-img {
+        height: 20px;
+        width: 20px;
+    }
 }
 
 .experience-location {
